fix(cf): notebook role to trust Fraud Detector
Since we pass the notebook exec role as default for Fraud Detector
data access, the notebook role must trust AFD.

--- a/FraudDetectorPoC.yaml
+++ b/FraudDetectorPoC.yaml
@@ -79,6 +79,11 @@ Resources:
           -
             Effect: Allow
             Principal:
+              Service: frauddetector.amazonaws.com
+            Action: sts:AssumeRole
+          -
+            Effect: Allow
+            Principal:
               Service: sagemaker.amazonaws.com
             Action: sts:AssumeRole
       Path: '/'
